chore: initial setup of llm txt

--- a/website/content/docs/concepts/style-props.mdx
+++ b/website/content/docs/concepts/style-props.mdx
@@ -1,15 +1,14 @@
 ---
 title: Style props
-description:
-  Style props lets you quickly build UI components in JSX by passing css properties as "props" to your components.
+description: Build UIs quickly by passing css properties as "props" to your components.
 ---
-
-Panda will extract the style props through static analysis and generate the CSS at build time.
 
 While you can get very far by using the `className` prop and function from Panda, style props provide a more ergonomic
 way of expressing styles.
 
-If you use Chakra UI, Styled System, or Theme UI, you'll feel right at home right away 😊
+Panda will extract the style props through static analysis and generate the CSS at build time.
+
+> If you use Chakra UI, Styled System, or Theme UI, you'll feel right at home right away 😊
 
 ```jsx
 import { css } from '../styled-system/css'
