refactor: ui and docs

--- a/website/content/docs/references/cli.mdx
+++ b/website/content/docs/references/cli.mdx
@@ -16,75 +16,22 @@ Initialize Panda in a project. This process will:
 
 ### Flags
 
-#### `--interactive, -i`
-
-Whether to run the interactive mode
-
-#### `--force, -f`
-
-Whether to overwrite existing files
-
-#### `--postcss, -p`
-
-Whether to emit a [postcss](https://postcss.org/) config file
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config)
-
-#### `--cwd <dir>`
-
-Path to current working direcory
-
-#### `--silent`
-
-Whether to suppress all output
-
-#### `--no-gitignore`
-
-Whether to update gitignorew with the output directory
-
-#### `--no-codegen`
-
-Whether to run the codegen process
-
-#### `--out-extension <ext>`
-
-The extension of the generated js files (default: 'mjs')
-
-Related: [`config.outExtension`](/docs/references/config#outextension)
-
-#### `--outdir <dir>`
-
-The output directory for the generated files
-
-Related: [`config.outdir`](/docs/references/config#outdir)
-
-#### `--jsx-framework <framework>`
-
-The jsx framework to use
-
-Related: [`config.jsxFramework`](/docs/references/config#jsxframework)
-
-#### `--syntax <syntax>`
-
-The css syntax preference
-
-Related: [`config.syntax`](/docs/references/config#syntax)
-
-#### `--strict-tokens`
-
-Set strictTokens to true
-
-Related: [`config.strictTokens`](/docs/references/config#stricttokens)
-
-#### `--logfile <file>`
-
-Outputs logs to a file
-
-Related: [Debugging](/docs/guides/debugging)
+| Flag                          | Description                                                   | Related                                                       |
+| ----------------------------- | ------------------------------------------------------------- | ------------------------------------------------------------- |
+| `--interactive, -i`           | Whether to run the interactive mode                           | -                                                             |
+| `--force, -f`                 | Whether to overwrite existing files                           | -                                                             |
+| `--postcss, -p`               | Whether to emit a [postcss](https://postcss.org/) config file | -                                                             |
+| `--config, -c <path>`         | Path to Panda config file                                     | [`config`](/docs/references/config)                           |
+| `--cwd <dir>`                 | Path to current working directory                             | -                                                             |
+| `--silent`                    | Whether to suppress all output                                | -                                                             |
+| `--no-gitignore`              | Whether to update gitignore with the output directory         | -                                                             |
+| `--no-codegen`                | Whether to run the codegen process                            | -                                                             |
+| `--out-extension <ext>`       | The extension of the generated js files (default: 'mjs')      | [`config.outExtension`](/docs/references/config#outextension) |
+| `--outdir <dir>`              | The output directory for the generated files                  | [`config.outdir`](/docs/references/config#outdir)             |
+| `--jsx-framework <framework>` | The jsx framework to use                                      | [`config.jsxFramework`](/docs/references/config#jsxframework) |
+| `--syntax <syntax>`           | The css syntax preference                                     | [`config.syntax`](/docs/references/config#syntax)             |
+| `--strict-tokens`             | Set strictTokens to true                                      | [`config.strictTokens`](/docs/references/config#stricttokens) |
+| `--logfile <file>`            | Outputs logs to a file                                        | [Debugging](/docs/guides/debugging)                           |
 
 ---
 
@@ -105,104 +52,24 @@ pnpm panda "./src/components/**"
 
 ### Flags
 
-#### `--outdir, -o [dir]`
-
-The output directory for the generated CSS utilities
-
-Related: [`config.outdir`](/docs/references/config#outdir)
-
-#### `--minify, -m`
-
-Whether to minify the generated CSS
-
-Related: [`config.minify`](/docs/references/config#minify)
-
-#### `--watch, -w`
-
-Whether to watch for changes in the project
-
-Related: [`config.watch`](/docs/references/config#watch)
-
-#### `--poll`
-
-Whether to poll for file changes
-
-Related: [`config.poll`](/docs/references/config#poll)
-
-#### `--config, -c <path>`
-
-The path to the config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--cwd <path>`
-
-The current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--preflight`
-
-Whether to emit the preflight or reset CSS
-
-Related: [`config.preflight`](/docs/references/config#preflight)
-
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--exclude, -e <files>`
-
-Files to exclude from the extract process
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--clean`
-
-Whether to clean the output directory before emitting
-
-Related: [`config.clean`](/docs/references/config#clean)
-
-#### `--hash`
-
-Whether to hash the output classnames
-
-Related: [`config.hash`](/docs/references/config#hash)
-
-#### `--lightningcss`
-
-Use `lightningcss` instead of `postcss` for css optimization.
-
-Related: [`config.lightningcss`](/docs/references/config#lightningcss)
-
-#### `--polyfill`
-
-Polyfill CSS @layers at-rules for older browsers.
-
-Related: [`config.polyfill`](/docs/references/config#polyfill)
-
-#### `--emitTokensOnly`
-
-Whether to only emit the `tokens` directory
-
-Related: [`config.emitTokensOnly`](/docs/references/config#emittokensonly)
-
-#### `--cpu-prof`
-
-This will generate a `panda-{command}-{timestamp}.cpuprofile` file in the current working directory, which can be opened
-in tools like [Speedscope](https://www.speedscope.app/)
-
-```bash
-pnpm panda --cpu-prof
-```
-
-Related: [Debugging](/docs/guides/debugging)
-
-#### `--logfile <file>`
-
-Outputs logs to a file
+| Flag                    | Description                                                            | Related                                                           |
+| ----------------------- | ---------------------------------------------------------------------- | ----------------------------------------------------------------- |
+| `--outdir, -o [dir]`    | The output directory for the generated CSS utilities                   | [`config.outdir`](/docs/references/config#outdir)                 |
+| `--minify, -m`          | Whether to minify the generated CSS                                    | [`config.minify`](/docs/references/config#minify)                 |
+| `--watch, -w`           | Whether to watch for changes in the project                            | [`config.watch`](/docs/references/config#watch)                   |
+| `--poll`                | Whether to poll for file changes                                       | [`config.poll`](/docs/references/config#poll)                     |
+| `--config, -c <path>`   | The path to the config file                                            | [`config`](/docs/references/config.md)                            |
+| `--cwd <path>`          | The current working directory                                          | [`config.cwd`](/docs/references/config#cwd)                       |
+| `--preflight`           | Whether to emit the preflight or reset CSS                             | [`config.preflight`](/docs/references/config#preflight)           |
+| `--silent`              | Whether to suppress all output                                         | [`config.logLevel`](/docs/references/config#log-level)            |
+| `--exclude, -e <files>` | Files to exclude from the extract process                              | [`config`](/docs/references/config.md)                            |
+| `--clean`               | Whether to clean the output directory before emitting                  | [`config.clean`](/docs/references/config#clean)                   |
+| `--hash`                | Whether to hash the output classnames                                  | [`config.hash`](/docs/references/config#hash)                     |
+| `--lightningcss`        | Use `lightningcss` instead of `postcss` for css optimization           | [`config.lightningcss`](/docs/references/config#lightningcss)     |
+| `--polyfill`            | Polyfill CSS @layers at-rules for older browsers                       | [`config.polyfill`](/docs/references/config#polyfill)             |
+| `--emitTokensOnly`      | Whether to only emit the `tokens` directory                            | [`config.emitTokensOnly`](/docs/references/config#emittokensonly) |
+| `--cpu-prof`            | Generate a `panda-{command}-{timestamp}.cpuprofile` file for profiling | [Debugging](/docs/guides/debugging)                               |
+| `--logfile <file>`      | Outputs logs to a file                                                 | [Debugging](/docs/guides/debugging)                               |
 
 ---
 
@@ -212,58 +79,16 @@ Generate new CSS utilities for your project based on the configuration file.
 
 ### Flags
 
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--clean`
-
-Whether to clean the output directory before emitting
-
-Related: [`config.clean`](/docs/references/config#clean)
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--watch, -w`
-
-Whether to watch for changes in the project
-
-Related: [`config.watch`](/docs/references/config#watch)
-
-#### `--poll, -p`
-
-Whether to poll for file changes
-
-Related: [`config.poll`](/docs/references/config#poll)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--cpu-prof`
-
-This will generate a `panda-{command}-{timestamp}.cpuprofile` file in the current working directory, which can be opened
-in tools like [Speedscope](https://www.speedscope.app/)
-
-```bash
-pnpm panda --cpu-prof
-```
-
-Related: [Debugging](/docs/guides/debugging)
-
-#### `--logfile <file>`
-
-Outputs logs to a file
-
-Related: [Debugging](/docs/guides/debugging)
+| Flag                  | Description                                                            | Related                                                |
+| --------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------ |
+| `--silent`            | Whether to suppress all output                                         | [`config.logLevel`](/docs/references/config#log-level) |
+| `--clean`             | Whether to clean the output directory before emitting                  | [`config.clean`](/docs/references/config#clean)        |
+| `--config, -c <path>` | Path to Panda config file                                              | [`config`](/docs/references/config.md)                 |
+| `--watch, -w`         | Whether to watch for changes in the project                            | [`config.watch`](/docs/references/config#watch)        |
+| `--poll, -p`          | Whether to poll for file changes                                       | [`config.poll`](/docs/references/config#poll)          |
+| `--cwd <path>`        | Current working directory                                              | [`config.cwd`](/docs/references/config#cwd)            |
+| `--cpu-prof`          | Generate a `panda-{command}-{timestamp}.cpuprofile` file for profiling | [Debugging](/docs/guides/debugging)                    |
+| `--logfile <file>`    | Outputs logs to a file                                                 | [Debugging](/docs/guides/debugging)                    |
 
 ## `panda cssgen`
 
@@ -291,97 +116,21 @@ panda cssgen "static" --outfile dist/static.css
 
 ### Flags
 
-#### `--outfile, -o <file>`
-
-Output file for extracted css, default to './styled-system/styles.css'
-
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--minify, -m`
-
-Whether to minify the generated CSS
-
-Related: [`config.minify`](/docs/references/config#minify)
-
-#### `--clean`
-
-Whether to clean the output directory before emitting
-
-Related: [`config.clean`](/docs/references/config#clean)
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--watch, -w`
-
-Whether to watch for changes in the project
-
-Related: [`config.watch`](/docs/references/config#watch)
-
-#### `--minimal`
-
-Skip generating CSS for theme tokens, preflight, keyframes, static and global css.
-
-This means that the generated CSS will only contain the CSS related to the styles found in the included files.
-
-> Note that you can use a `glob` to override the `config.include` option like this:
-> `panda cssgen "src/**/*.css" --minimal`
-
-This is useful when you want to split your CSS into multiple files, for example if you want to split by pages.
-
-Use it like this:
-
-```bash
-panda cssgen "src/**/pages/*.css" --minimal --outfile dist/pages.css
-```
-
-#### `--poll, -p`
-
-Whether to poll for file changes
-
-Related: [`config.poll`](/docs/references/config#poll)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--lightningcss`
-
-Use `lightningcss` instead of `postcss` for css optimization.
-
-Related: [`config.lightningcss`](/docs/references/config#lightningcss)
-
-#### `--polyfill`
-
-Polyfill CSS @layers at-rules for older browsers.
-
-Related: [`config.polyfill`](/docs/references/config#polyfill)
-
-#### `--cpu-prof`
-
-This will generate a `panda-{command}-{timestamp}.cpuprofile` file in the current working directory, which can be opened
-in tools like [Speedscope](https://www.speedscope.app/)
-
-```bash
-pnpm panda --cpu-prof
-```
-
-Related: [Debugging](/docs/guides/debugging)
-
-#### `--logfile <file>`
-
-Outputs logs to a file
-
-Related: [Debugging](/docs/guides/debugging)
+| Flag                   | Description                                                                       | Related                                                       |
+| ---------------------- | --------------------------------------------------------------------------------- | ------------------------------------------------------------- |
+| `--outfile, -o <file>` | Output file for extracted css, default to './styled-system/styles.css'            | -                                                             |
+| `--silent`             | Whether to suppress all output                                                    | [`config.logLevel`](/docs/references/config#log-level)        |
+| `--minify, -m`         | Whether to minify the generated CSS                                               | [`config.minify`](/docs/references/config#minify)             |
+| `--clean`              | Whether to clean the output directory before emitting                             | [`config.clean`](/docs/references/config#clean)               |
+| `--config, -c <path>`  | Path to Panda config file                                                         | [`config`](/docs/references/config.md)                        |
+| `--watch, -w`          | Whether to watch for changes in the project                                       | [`config.watch`](/docs/references/config#watch)               |
+| `--minimal`            | Skip generating CSS for theme tokens, preflight, keyframes, static and global css | -                                                             |
+| `--poll, -p`           | Whether to poll for file changes                                                  | [`config.poll`](/docs/references/config#poll)                 |
+| `--cwd <path>`         | Current working directory                                                         | [`config.cwd`](/docs/references/config#cwd)                   |
+| `--lightningcss`       | Use `lightningcss` instead of `postcss` for css optimization                      | [`config.lightningcss`](/docs/references/config#lightningcss) |
+| `--polyfill`           | Polyfill CSS @layers at-rules for older browsers                                  | [`config.polyfill`](/docs/references/config#polyfill)         |
+| `--cpu-prof`           | Generate a `panda-{command}-{timestamp}.cpuprofile` file for profiling            | [Debugging](/docs/guides/debugging)                           |
+| `--logfile <file>`     | Outputs logs to a file                                                            | [Debugging](/docs/guides/debugging)                           |
 
 ## `panda studio`
 
@@ -389,41 +138,16 @@ Realtime documentation for your design tokens.
 
 ### Flags
 
-#### `--build`
-
-Build
-
-#### `--preview`
-
-Preview
-
-#### `--port <port>`
-
-Use custom port
-
-#### `--host`
-
-Expose to custom host
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--outdir <dir>`
-
-Output directory for static files
-
-#### `--base <path>`
-
-Base path of project
+| Flag                  | Description                       | Related                                     |
+| --------------------- | --------------------------------- | ------------------------------------------- |
+| `--build`             | Build                             | -                                           |
+| `--preview`           | Preview                           | -                                           |
+| `--port <port>`       | Use custom port                   | -                                           |
+| `--host`              | Expose to custom host             | -                                           |
+| `--config, -c <path>` | Path to Panda config file         | [`config`](/docs/references/config.md)      |
+| `--cwd <path>`        | Current working directory         | [`config.cwd`](/docs/references/config#cwd) |
+| `--outdir <dir>`      | Output directory for static files | -                                           |
+| `--base <path>`       | Base path of project              | -                                           |
 
 ## `panda analyze`
 
@@ -443,29 +167,12 @@ pnpm panda analyze "src/components/**"
 
 ### Flags
 
-#### `--outfile <filepath>`
-
-Output analyze report in given JSON filepath
-
-> `panda analyze --outfile report.json`
-
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
+| Flag                   | Description                                  | Related                                                |
+| ---------------------- | -------------------------------------------- | ------------------------------------------------------ |
+| `--outfile <filepath>` | Output analyze report in given JSON filepath | -                                                      |
+| `--silent`             | Whether to suppress all output               | [`config.logLevel`](/docs/references/config#log-level) |
+| `--config, -c <path>`  | Path to Panda config file                    | [`config`](/docs/references/config.md)                 |
+| `--cwd <path>`         | Current working directory                    | [`config.cwd`](/docs/references/config#cwd)            |
 
 ## `panda debug`
 
@@ -475,50 +182,16 @@ More details in [Debugging](/docs/guides/debugging) docs.
 
 ### Flags
 
-#### `--silent`
-
-Whether to suppress all output
-
-#### `--dry`
-
-Output debug files in stdout without writing to disk
-
-#### `--outdir <dir>`
-
-Output directory for debug files, defaults to `../styled-system/debug`
-
-#### `--only-config`
-
-Should only output the config file, default to 'false'
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--cpu-prof`
-
-This will generate a `panda-{command}-{timestamp}.cpuprofile` file in the current working directory, which can be opened
-in tools like [Speedscope](https://www.speedscope.app/)
-
-```bash
-pnpm panda --cpu-prof
-```
-
-Related: [Debugging](/docs/guides/debugging#performance-profiling)
-
-#### `--logfile <file>`
-
-Outputs logs to a file
-
-Related: [Debugging](/docs/guides/debugging)
+| Flag                  | Description                                                            | Related                                                   |
+| --------------------- | ---------------------------------------------------------------------- | --------------------------------------------------------- |
+| `--silent`            | Whether to suppress all output                                         | -                                                         |
+| `--dry`               | Output debug files in stdout without writing to disk                   | -                                                         |
+| `--outdir <dir>`      | Output directory for debug files, defaults to `../styled-system/debug` | -                                                         |
+| `--only-config`       | Should only output the config file, default to 'false'                 | -                                                         |
+| `--config, -c <path>` | Path to Panda config file                                              | [`config`](/docs/references/config.md)                    |
+| `--cwd <path>`        | Current working directory                                              | [`config.cwd`](/docs/references/config#cwd)               |
+| `--cpu-prof`          | Generate a `panda-{command}-{timestamp}.cpuprofile` file for profiling | [Debugging](/docs/guides/debugging#performance-profiling) |
+| `--logfile <file>`    | Outputs logs to a file                                                 | [Debugging](/docs/guides/debugging)                       |
 
 ## `panda ship`
 
@@ -536,45 +209,15 @@ pnpm panda ship "./src/components/**"
 
 ### Flags
 
-#### `--outfile <filepath>`
-
-Output path for the JSON build info file, default to './styled-system/panda.buildinfo.json'
-
-> `panda ship --outfile report.json`
-
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--minify, -m`
-
-Whether to minify the generated JSON
-
-#### `--config, -c <path>`
-
-Path to Panda config file
-
-Related: [`config`](/docs/references/config.md)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
-
-#### `--watch, -w`
-
-Whether to watch for changes in the project
-
-Related: [`config.watch`](/docs/references/config#watch)
-
-#### `--poll, -p`
-
-Whether to poll for file changes
-
-Related: [`config.poll`](/docs/references/config#poll)
+| Flag                   | Description                                                                                 | Related                                                |
+| ---------------------- | ------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
+| `--outfile <filepath>` | Output path for the JSON build info file, default to './styled-system/panda.buildinfo.json' | -                                                      |
+| `--silent`             | Whether to suppress all output                                                              | [`config.logLevel`](/docs/references/config#log-level) |
+| `--minify, -m`         | Whether to minify the generated JSON                                                        | -                                                      |
+| `--config, -c <path>`  | Path to Panda config file                                                                   | [`config`](/docs/references/config.md)                 |
+| `--cwd <path>`         | Current working directory                                                                   | [`config.cwd`](/docs/references/config#cwd)            |
+| `--watch, -w`          | Whether to watch for changes in the project                                                 | [`config.watch`](/docs/references/config#watch)        |
+| `--poll, -p`           | Whether to poll for file changes                                                            | [`config.poll`](/docs/references/config#poll)          |
 
 ## `panda emit-pkg`
 
@@ -584,24 +227,9 @@ Emit package.json with entrypoints, can be used to create a workspace package de
 
 ### Flags
 
-#### `--outdir <dir>`
-
-The output directory for the generated CSS utilities
-
-Related: [`config.outdir`](/docs/references/config#outdir)
-
-#### `--base <path>`
-
-The base directory of the package.json entrypoints
-
-#### `--silent`
-
-Whether to suppress all output
-
-Related: [`config.logLevel`](/docs/references/config#log-level)
-
-#### `--cwd <path>`
-
-Current working directory
-
-Related: [`config.cwd`](/docs/references/config#cwd)
+| Flag             | Description                                          | Related                                                |
+| ---------------- | ---------------------------------------------------- | ------------------------------------------------------ |
+| `--outdir <dir>` | The output directory for the generated CSS utilities | [`config.outdir`](/docs/references/config#outdir)      |
+| `--base <path>`  | The base directory of the package.json entrypoints   | -                                                      |
+| `--silent`       | Whether to suppress all output                       | [`config.logLevel`](/docs/references/config#log-level) |
+| `--cwd <path>`   | Current working directory                            | [`config.cwd`](/docs/references/config#cwd)            |
